sinatra has a request.xhr to detect ajax requests - use this to turn layout on and off with a single route

--- a/views/index.erb
+++ b/views/index.erb
@@ -18,7 +18,7 @@ $(function() {
 	$("#searchform").submit(function() {
 		// load is an ajax call to /search line 19 of app.rb . take the result and shove it into the object
 		// ajax is when your javascript code goes browsing without you
-		$("#output").load("/ajax_search", "key=" + $("#key").val());
+		$("#output").load("/search", "key=" + $("#key").val());
 		//dig into the form, find the input whose id = key, grab the value that the user had typed in.
 		return false;
 	});
